eliminate code warnings remove obsolete dependency