@@ -24,8 +24,8 @@ import static org.junit.jupiter.api.Assertions.assertThrows;
 
 import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 
-import org.apache.commons.lang3.CharEncoding;
 import org.junit.jupiter.api.Test;
 
 /**
@@ -36,11 +36,11 @@ class EscapeTest {
 
   @Test
   void testUrlEncode() throws UnsupportedEncodingException {
-    assertEquals(URLEncoder.encode("abc", CharEncoding.UTF_8), Escape.urlEncode("abc"));
-    assertEquals(URLEncoder.encode("Abc_äöüÄÖÜß", CharEncoding.UTF_8), Escape.urlEncode("Abc_äöüÄÖÜß"));
-    assertEquals(URLEncoder.encode("Der Jodelkaiser", CharEncoding.UTF_8), Escape.urlEncode("Der Jodelkaiser"));
-    assertEquals(URLEncoder.encode("Der  Jodelkaiser", CharEncoding.UTF_8), Escape.urlEncode("Der  Jodelkaiser"));
-    assertEquals(URLEncoder.encode("äölsa§$5x !?_", CharEncoding.UTF_8), Escape.urlEncode("äölsa§$5x !?_"));
+    assertEquals(URLEncoder.encode("abc", StandardCharsets.UTF_8.name()), Escape.urlEncode("abc"));
+    assertEquals(URLEncoder.encode("Abc_äöüÄÖÜß", StandardCharsets.UTF_8.name()), Escape.urlEncode("Abc_äöüÄÖÜß"));
+    assertEquals(URLEncoder.encode("Der Jodelkaiser", StandardCharsets.UTF_8.name()), Escape.urlEncode("Der Jodelkaiser"));
+    assertEquals(URLEncoder.encode("Der  Jodelkaiser", StandardCharsets.UTF_8.name()), Escape.urlEncode("Der  Jodelkaiser"));
+    assertEquals(URLEncoder.encode("äölsa§$5x !?_", StandardCharsets.UTF_8.name()), Escape.urlEncode("äölsa§$5x !?_"));
   }
 
   @Test
